[arm32] client vm build failure

XMLWordPrintable

    • b01
    • arm
    • linux

      JDK13 is failed to build client vm with following message

      /home/user/jdk13u-dev/src/hotspot/cpu/arm/sharedRuntime_arm.cpp: In static member function 'static nmethod* Sha
      redRuntime::generate_native_wrapper(MacroAssembler*, const methodHandle&, int, BasicType*, VMRegPair*, BasicType, address)':
      /home/user/jdk13u-dev/src/hotspot/cpu/arm/sharedRuntime_arm.cpp:1221:34: error: 'SafepointSynchronize' has not
      been declared
         InlinedAddress safepoint_state(SafepointSynchronize::address_of_state());
                                        ^
      /home/user/jdk13u-dev/src/hotspot/cpu/arm/sharedRuntime_arm.cpp:1232:14: error: 'SafepointSynchronize' has not
      been declared
         __ cmp(R2, SafepointSynchronize::_not_synchronized);

            Assignee:
            Sergey Nazarkin
            Reporter:
            Sergey Nazarkin
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: