8247873: [arm32] client vm build failure

Reviewed-by: yan